--- a/dspy.ipynb
+++ b/dspy.ipynb
@@ -53,25 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dspy\n",
-    "\n",
-    "lm = dspy.LM('openai/gpt-4o-mini-eastus-0718')\n",
-    "dspy.configure(lm=lm)\n",
-    "\n",
-    "qa = dspy.Predict('question: str -> response: str')\n",
-    "qa(question=\"what are high memory and low memory on linux?\").response\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from dotenv import dotenv_values, load_dotenv\n",
     "\n",
     "load_dotenv()\n",
@@ -82,7 +68,7 @@
     "embedding_model=\"text-embedding-3-small-eastus\"\n",
     "deployment='gpt-4o-eastus-0806'\n",
     "\n",
-    "import dspy\n",
+    "\n",
     "\n",
     "turbo = dspy.AzureOpenAI(\n",
     "    api_key=api_key,\n",
@@ -91,30 +77,29 @@
     "    model=deployment,\n",
     ")\n",
     "\n",
-    "dspy.configure(lm=turbo)\n",
-    "\n",
-    "\n"
+    "dspy.configure(lm=turbo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"High memory and low memory in Linux refer to different regions of the system's RAM. Low memory is directly accessible by the kernel and is typically the first 896 MB on a 32-bit system. High memory is the rest of the RAM that requires special handling to be accessed by the kernel. This distinction is more relevant in 32-bit systems due to their limited address space. In 64-bit systems, the distinction is less significant because they can address much larger amounts of memory directly.\""
+       "'A black hole is a region in space where the gravitational pull is so strong that nothing, not even light, can escape from it. This occurs when a massive star collapses under its own gravity, compressing its mass into a very small area. The boundary around a black hole is called the event horizon, beyond which nothing can return. Black holes can vary in size and are often detected by observing the effects of their gravity on nearby stars and gas.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Test DSpy with AzureOpenAI\n",
     "qa = dspy.Predict('question: str -> response: str')\n",
-    "qa(question=\"what are high memory and low memory on linux?\").response"
+    "qa(question=\"What is a blackhole?\").response"
    ]
   }
  ],
