working BootstrapFewShotWithRandomSearch optimizer 241028-02

--- a/dspy.ipynb
+++ b/dspy.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSPy on Azure OpenAI - 241026"
+    "# DSPy on Azure OpenAI - 241026\n",
+    "\n",
+    "In this notebook, we will first structure a classification problem that is complex enough so that gpt-4o-mini will fail to correctly classify all data points. We will then use DSPy to optimise the prompt and the few-shot examples and show that DSPy optimisation will yield higher accuracy than the default prompt and examples.\n",
+    "\n",
+    "The example is to build a legal assistant that classifies legal documents by detecting certain \"clauses\" in them. The documents will on average 3000 tokens long which will make detection more difficult for gpt-4o-mini.\n",
+    "\n",
+    "The code in this notebook has 4 major parts...\n",
+    "1. We will first create the legal documents with gpt-4o.\n",
+    "2. Eval the default prompt and examples with gpt-4o-mini.\n",
+    "3. Use DSPy to optimise the prompt and examples.\n",
+    "4. Eval the optimised prompt and examples.\n",
+    "\n"
    ]
   },
   {
@@ -57,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#test DSPy on AzureOpenAI\n",
     "import os \n",
     "import dspy\n",
     "from dotenv import dotenv_values, load_dotenv\n",
@@ -96,7 +108,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the Contracts "
+    "# Create the Contracts \n",
+    "\n",
+    "We will use gpt-4o to create the legal documents.\n",
+    "Each document can have one or more of the 8 clauses we will use to classify the documents. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2550,7 +2569,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.49it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:12<00:00,  6.35it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n"
      ]
@@ -2568,7 +2587,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.60it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.28it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2591,21 +2610,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 12/320 [00:05<02:19,  2.21it/s]\n"
+      "  5%|▍         | 15/320 [00:07<02:42,  1.88it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 8 full traces after 13 examples in round 0.\n"
+      "Bootstrapped 8 full traces after 16 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.29it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:17<00:00,  4.60it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2628,21 +2647,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 11/320 [00:04<02:19,  2.22it/s]\n"
+      "  3%|▎         | 10/320 [00:07<03:45,  1.38it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 7 full traces after 12 examples in round 0.\n"
+      "Bootstrapped 7 full traces after 11 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.09it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:17<00:00,  4.49it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2665,21 +2684,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▏         | 4/320 [00:01<02:00,  2.61it/s]\n"
+      "  1%|          | 3/320 [00:03<05:28,  1.04s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 3 full traces after 5 examples in round 0.\n"
+      "Bootstrapped 3 full traces after 4 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.45it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:13<00:00,  6.09it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2702,21 +2721,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 3/320 [00:01<02:13,  2.37it/s]\n"
+      "  1%|▏         | 4/320 [00:03<04:39,  1.13it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 1 full traces after 4 examples in round 0.\n"
+      "Bootstrapped 1 full traces after 5 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:08<00:00,  9.17it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:16<00:00,  4.74it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2739,21 +2758,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 7/320 [00:03<02:47,  1.87it/s]\n"
+      "  2%|▏         | 5/320 [00:04<04:27,  1.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 4 full traces after 8 examples in round 0.\n"
+      "Bootstrapped 4 full traces after 6 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.43it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:16<00:00,  4.90it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2776,21 +2795,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▏         | 4/320 [00:02<02:40,  1.96it/s]\n"
+      "  2%|▏         | 5/320 [00:04<04:30,  1.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
+      "Bootstrapped 4 full traces after 6 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.54it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:14<00:00,  5.64it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2813,21 +2832,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  4%|▍         | 14/320 [00:05<02:06,  2.42it/s]\n"
+      "  3%|▎         | 10/320 [00:09<04:57,  1.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 5 full traces after 15 examples in round 0.\n"
+      "Bootstrapped 5 full traces after 11 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.36it/s]\n",
+      "Average Metric: 49 / 80  (61.2): 100%|██████████| 80/80 [00:20<00:00,  3.89it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2842,29 +2861,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0]\n",
-      "Best score so far: 60.0\n"
+      "New best score: 61.25 for seed 5\n",
+      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 61.25]\n",
+      "Best score so far: 61.25\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 3/320 [00:01<02:48,  1.89it/s]\n"
+      "  1%|          | 2/320 [00:01<05:12,  1.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 2 full traces after 4 examples in round 0.\n"
+      "Bootstrapped 2 full traces after 3 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.48it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:19<00:00,  4.05it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2879,15 +2899,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0]\n",
-      "Best score so far: 60.0\n"
+      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 61.25, 60.0]\n",
+      "Best score so far: 61.25\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 11/320 [00:06<03:02,  1.70it/s]\n"
+      "  3%|▎         | 11/320 [00:11<05:09,  1.00s/it]\n"
      ]
     },
     {
@@ -2901,7 +2921,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:08<00:00,  8.91it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:23<00:00,  3.46it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2916,29 +2936,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0]\n",
-      "Best score so far: 60.0\n"
+      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 61.25, 60.0, 60.0]\n",
+      "Best score so far: 61.25\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 5/320 [00:02<02:12,  2.37it/s]\n"
+      "  3%|▎         | 11/320 [00:04<02:00,  2.56it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 4 full traces after 6 examples in round 0.\n"
+      "Bootstrapped 4 full traces after 12 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 50 / 80  (62.5): 100%|██████████| 80/80 [00:10<00:00,  7.72it/s]\n",
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:10<00:00,  7.68it/s]\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'clientx' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
       "WARNING:root:Failed to deep copy attribute 'client' of ContractClauseClassifier, falling back to shallow copy or reference copy.\n",
@@ -2953,46 +2973,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New best score: 62.5 for seed 8\n",
-      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 62.5]\n",
-      "Best score so far: 62.5\n"
+      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 61.25, 60.0, 60.0, 60.0]\n",
+      "Best score so far: 61.25\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 10/320 [00:04<02:31,  2.05it/s]\n"
+      "  6%|▌         | 19/320 [00:07<02:04,  2.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bootstrapped 8 full traces after 11 examples in round 0.\n"
+      "Bootstrapped 8 full traces after 20 examples in round 0.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.37it/s]\n"
+      "Average Metric: 48 / 80  (60.0): 100%|██████████| 80/80 [00:09<00:00,  8.09it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 62.5, 60.0]\n",
-      "Best score so far: 62.5\n",
-      "13 candidate programs found.\n"
+      "Scores so far: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 61.25, 60.0, 60.0, 60.0, 60.0]\n",
+      "Best score so far: 61.25\n",
+      "13 candidate programs found.\n",
+      "\n",
+      "[OPTIMAL FEW-SHOT EXAMPLES USED]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing contracts: 100%|██████████| 50/50 [03:09<00:00,  3.78s/it]"
+      "Processing contracts: 100%|██████████| 50/50 [03:56<00:00,  4.72s/it]"
      ]
     },
     {
@@ -3002,7 +3023,7 @@
       "\n",
       "[FINAL RESULTS]\n",
       "Accuracy for 'Non-Disclosure Agreement (NDA)': 60.00%\n",
-      "Accuracy for 'Termination Clause': 50.00%\n",
+      "Accuracy for 'Termination Clause': 52.00%\n",
       "Accuracy for 'Indemnity Clause': 46.00%\n",
       "Accuracy for 'Force Majeure Clause': 50.00%\n",
       "Accuracy for 'Governing Law Clause': 52.00%\n",
@@ -3259,6 +3280,14 @@
     "        valset=valset\n",
     "    )\n",
     "    clause_classifier.save(\"optimized_fewshot_classifier.json\")\n",
+    "\n",
+    "    # Display the optimal few-shot examples\n",
+    "    print(\"\\n[OPTIMAL FEW-SHOT EXAMPLES USED]\")\n",
+    "    for idx, demo in enumerate(clause_classifier.demos):\n",
+    "        print(f\"Example {idx+1}:\")\n",
+    "        print(f\"Clause Check: {demo['clause_check']}\")\n",
+    "        print(f\"Contract Text: {demo['contract_text']}\")\n",
+    "        print(f\"Answer: {demo['answer']}\\n\")\n",
     "else:\n",
     "    clause_classifier = ContractClauseClassifier(client, clientx, deployment)\n",
     "    clause_classifier.load(\"optimized_fewshot_classifier.json\")\n",
