--- a/dspy.ipynb
+++ b/dspy.ipynb
@@ -3383,6 +3383,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Althought the gains have been marginal in this example and only visible with certain classes, this notebook hopefully will help with enabling DSPy to run with AzureOpenAI models...Hope you enjoyed the content. Reach out if any questions.\n",
+    "\n",
+    "*DSPy offers more advanced optimizers like [MIPROv2](https://dspy-docs.vercel.app/deep-dive/optimizers/miprov2) which use Bayesian Optimization rather than random search as we have used here with the \"BootstrapFewShotWithRandomSearch\" optimizer. More advanced optimizers will be able to find better prompts and examples faster than the random search we have used here although they require more training samples (200+) to really show their power.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
