advanced miprov2 trials

--- a/dspy_advanced.ipynb
+++ b/dspy_advanced.ipynb
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,283 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating contracts with gpt-4o-eastus-0806:  36%|███▌      | 36/100 [22:00<37:04, 34.76s/it]"
+      "Evaluating contracts with gpt-4o-eastus-0806:  40%|████      | 40/100 [24:48<40:54, 40.90s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 40 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 60.00%\n",
+      "Termination Clause: 55.00%\n",
+      "Indemnity Clause: 10.00%\n",
+      "Force Majeure Clause: 17.50%\n",
+      "Data Protection Clause: 47.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  45%|████▌     | 45/100 [27:53<35:17, 38.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 45 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 53.33%\n",
+      "Termination Clause: 51.11%\n",
+      "Indemnity Clause: 17.78%\n",
+      "Force Majeure Clause: 15.56%\n",
+      "Data Protection Clause: 44.44%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  50%|█████     | 50/100 [31:13<35:33, 42.67s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 50 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 50.00%\n",
+      "Termination Clause: 50.00%\n",
+      "Indemnity Clause: 26.00%\n",
+      "Force Majeure Clause: 14.00%\n",
+      "Data Protection Clause: 50.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  55%|█████▌    | 55/100 [34:19<30:38, 40.86s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 55 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 45.45%\n",
+      "Termination Clause: 45.45%\n",
+      "Indemnity Clause: 32.73%\n",
+      "Force Majeure Clause: 14.55%\n",
+      "Data Protection Clause: 50.91%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  60%|██████    | 60/100 [37:23<26:51, 40.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 60 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 41.67%\n",
+      "Termination Clause: 41.67%\n",
+      "Indemnity Clause: 38.33%\n",
+      "Force Majeure Clause: 13.33%\n",
+      "Data Protection Clause: 50.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  65%|██████▌   | 65/100 [40:34<23:35, 40.46s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 65 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 40.00%\n",
+      "Termination Clause: 40.00%\n",
+      "Indemnity Clause: 36.92%\n",
+      "Force Majeure Clause: 20.00%\n",
+      "Data Protection Clause: 50.77%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  70%|███████   | 70/100 [43:40<19:49, 39.63s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 70 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 38.57%\n",
+      "Termination Clause: 37.14%\n",
+      "Indemnity Clause: 35.71%\n",
+      "Force Majeure Clause: 25.71%\n",
+      "Data Protection Clause: 52.86%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  75%|███████▌  | 75/100 [46:45<15:48, 37.94s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 75 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 36.00%\n",
+      "Termination Clause: 36.00%\n",
+      "Indemnity Clause: 34.67%\n",
+      "Force Majeure Clause: 30.67%\n",
+      "Data Protection Clause: 53.33%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  80%|████████  | 80/100 [49:50<12:32, 37.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 80 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 33.75%\n",
+      "Termination Clause: 33.75%\n",
+      "Indemnity Clause: 32.50%\n",
+      "Force Majeure Clause: 35.00%\n",
+      "Data Protection Clause: 52.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  85%|████████▌ | 85/100 [52:54<09:16, 37.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 85 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 31.76%\n",
+      "Termination Clause: 31.76%\n",
+      "Indemnity Clause: 30.59%\n",
+      "Force Majeure Clause: 32.94%\n",
+      "Data Protection Clause: 55.29%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  90%|█████████ | 90/100 [56:00<06:09, 36.96s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 90 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 30.00%\n",
+      "Termination Clause: 30.00%\n",
+      "Indemnity Clause: 31.11%\n",
+      "Force Majeure Clause: 32.22%\n",
+      "Data Protection Clause: 57.78%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806:  95%|█████████▌| 95/100 [59:03<02:58, 35.77s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 95 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 28.42%\n",
+      "Termination Clause: 28.42%\n",
+      "Indemnity Clause: 29.47%\n",
+      "Force Majeure Clause: 30.53%\n",
+      "Data Protection Clause: 60.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating contracts with gpt-4o-eastus-0806: 100%|██████████| 100/100 [1:02:08<00:00, 37.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Intermediate Evaluation Results after 100 contracts with gpt-4o-eastus-0806:\n",
+      "Non-Disclosure Agreement (NDA) clause: 27.00%\n",
+      "Termination Clause: 27.00%\n",
+      "Indemnity Clause: 28.00%\n",
+      "Force Majeure Clause: 29.00%\n",
+      "Data Protection Clause: 62.00%\n",
+      "\n",
+      "Final Evaluation Results for gpt-4o-mini:\n",
+      "                                  Clause  Accuracy (%)\n",
+      "0  Non-Disclosure Agreement (NDA) clause          27.0\n",
+      "1                     Termination Clause          55.0\n",
+      "2                       Indemnity Clause          79.0\n",
+      "3                   Force Majeure Clause          35.0\n",
+      "4                 Data Protection Clause          36.0\n",
+      "\n",
+      "Final Evaluation Results for gpt-4o:\n",
+      "                                  Clause  Accuracy (%)\n",
+      "0  Non-Disclosure Agreement (NDA) clause          27.0\n",
+      "1                     Termination Clause          27.0\n",
+      "2                       Indemnity Clause          28.0\n",
+      "3                   Force Majeure Clause          29.0\n",
+      "4                 Data Protection Clause          62.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
